--- a/src/login.css
+++ b/src/login.css
@@ -1,6 +1,19 @@
-
+/* body{
+    background:#ffa600;
+  background-size: cover;
+  background-position: center;
+} */
 
 .temp{
+    height: 80vh ;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+.temp1{
+
     height: 100vh ;
     align-items: center;
     justify-content: center;
@@ -19,23 +32,27 @@
     font-size: 25px;
     border: none;
     border-bottom: 1px solid black;
+    background:none;
+    color: black;
 }
 
 .registerButton{
     font-size: 25px;
 }
 .inputfield:focus{
-    
+    outline: none;
     box-shadow: none;
- 
+    border: none;
 }
 
 .homepagetemp{
     display: flex;
-    justify-content: center;
-    align-items: center;
+ 
+    /* justify-content: center;
+    align-items: center; */
     /* height: 20vh; */
     margin-top: 50px;
+    /* background-image: url('https://i.postimg.cc/bvCX3R8H/ui-ux-representations-with-smartphone.jpg'); */
 }
 .Homeprofileimg{
     /* width: 8%; */
