--- a/src/login.css
+++ b/src/login.css
@@ -48,8 +48,8 @@
 .homepagetemp{
     display: flex;
  
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center; 
+    align-items: center; 
     /* height: 20vh; */
     margin-top: 50px;
     /* background-image: url('https://i.postimg.cc/bvCX3R8H/ui-ux-representations-with-smartphone.jpg'); */
